Fixed error in 'show user' action which tried to display a users first post when one hadn't been created yet

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,8 +11,13 @@
 </p>
 
 <p>
+<% if @user.microposts.first.try(:content) == nil %>
+  <strong>First Micropost:</strong>
+  <%= "no posts" %>
+<% else %>
   <strong>First Micropost:</strong>
   <%= @user.microposts.first.content %>
+<% end %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
